--- a/WWIlogin.html
+++ b/WWIlogin.html
@@ -45,7 +45,9 @@ Known errors: none
 
         <input type="hidden" name="action" value="login"/>
 			<button type="submit" class="btn btn-primary">Submit</button>
-
+        
+        <h4> Username: Acadia, 
+            Password: Jodrey</h4>
     </form>
 
     <h2> For login information please contact Jamie Symonds at jamie.symonds@acadiau.ca</h2>
