--- a/copyright.html
+++ b/copyright.html
@@ -26,12 +26,18 @@ Known errors:
         <ul>
            <li><a href="index.html">Home Page</a></li>
             <li><a href="upload.html">Upload</a></li>
+            <li><a href="recognize.html">Recognize</a></li>
             <li><a href="copyright.html">Copyright</a></li>
         </ul>
     </nav>
-    
-    <h3> Please contact the Hantsport Historical Society for more information. 
-    hantsportareahistoricalsociety@gmail.com
+    <div class="loginImage">
+        <img src="LoginAvatar.png" alt="Avatar" class="avatar">
+        </div>
+    <h3> Please contact the Hantsport Historical Society for more information regarding photographs. </h3>
+    <h3>
+    Email: hantsportareahistoricalsociety@gmail.com
+    </h3>
+    <h5> Contact Professor Jamie Symonds at jamie.symonds@acadiau.ca if you have technical issues. </h5>
     </body>    
 
 </html>
