--- a/index.html
+++ b/index.html
@@ -24,15 +24,19 @@ Known errors: none
         <ul>
             <li><a href="index.html">Home Page</a></li>
             <li><a href="upload.html">Upload</a></li>
+            <li><a href="recognize.html">Recognize</a></li>
             <li><a href="copyright.html">Copyright</a></li>
         </ul>
     </nav>
+    <div class="loginImage">
+        <img src="LoginAvatar.png" alt="Avatar" class="avatar">
+        </div>
     <aside>
         <nav class="WhatN">
             <h2>Welcome to the WWI face database! </h2>
             <P> This database is meant for researchers to upload photos and find a potential face match for a previously unidentified person. Please see the copyright page for more information or if you have questions.
             </P>
-            <img alt="above" src="campusabove.jpg" style="float: right;" />
+            
         </nav>
     </aside>
 
