--- a/recognize.html
+++ b/recognize.html
@@ -1,26 +1,24 @@
 <!--
 Name: Hope Latta
-Student Number: 100106999
-Course: Final Project
-School: Acadia
-Version: 1.0
-Purpose: this is the upload page
+Assignment: Final project
+Version: 3.0
+Purpose: this is the recognize page
 Notes: None.
 URL: Unknown.
-Known errors: 
+Known errors: none
 -->
 
+<!DOCTYPE html>
 <html lang="en">
-    
-    <head>
-    <title>WWI Face Database</title>
+
+<head>
+    <title>WWI Faces</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="login.css" />
 </head>
-    
+
 <body>
     <header>
-        <h1> World War 1 Face Database</h1>
+        <h1>WWI Faces</h1>
     </header>
       <nav class="sitenav">
         <ul>
@@ -30,17 +28,24 @@ Known errors:
             <li><a href="copyright.html">Copyright</a></li>
         </ul>
     </nav>
-    <div class="loginImage">
+    <aside>
+        <div class="loginImage">
         <img src="LoginAvatar.png" alt="Avatar" class="avatar">
         </div>
+        <nav class="WhatN">
+            <h2>Welcome to the WWI face database! </h2>
+            <P> This database is meant for researchers to upload photos and find a potential face match for a previously unidentified person. Please see the copyright page for more information or if you have questions.
+            </P>
+            <img alt="above" src="campusabove.jpg" style="float: right;" />
+        </nav>
+    </aside>
     <h2> To upload a photo, ensure that the name of the photo is the name of the person in it. Ensure that there are no extra characters in the title. </h2>
-    <form action="upload.php" method="post"
+    <form action="recognize.php" method="post"
           enctype="multipart/form-data">
         Select image to upload: 
         <input type="file" name="file" id="fileToUpload">
         <input type="submit" value="Upload" name="Submit"> 
-    </form>
-    </body>    
+    </form> 
 
-</html>
 
+</body>
