--- a/copyright.html
+++ b/copyright.html
@@ -28,6 +28,8 @@ Known errors:
             <li><a href="upload.html">Upload</a></li>
             <li><a href="recognize.html">Recognize</a></li>
             <li><a href="copyright.html">Copyright</a></li>
+            
+            <li><a href="WWILogin.html">Log out</a></li>
         </ul>
     </nav>
     <div class="loginImage">
@@ -38,6 +40,10 @@ Known errors:
     Email: hantsportareahistoricalsociety@gmail.com
     </h3>
     <h5> Contact Professor Jamie Symonds at jamie.symonds@acadiau.ca if you have technical issues. </h5>
+    <h5> All photographs on this website were created before January 1, 1949 and are therefore in the public domain (SC 1997, c24, s.58). </h5>
+   
+    <footer> <a rel="license" href="http://creativecommons.org/licenses/by/2.5/ca/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by/2.5/ca/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/ca/">Creative Commons Attribution 2.5 Canada License</a>.
+    </footer>
     </body>    
 
 </html>
