--- a/recognize.html
+++ b/recognize.html
@@ -26,6 +26,8 @@ Known errors: none
             <li><a href="upload.html">Upload</a></li>
             <li><a href="recognize.html">Recognize</a></li>
             <li><a href="copyright.html">Copyright</a></li>
+            
+            <li><a href="WWILogin.html">Log out</a></li>
         </ul>
     </nav>
     <aside>
@@ -36,8 +38,7 @@ Known errors: none
             <h2>Welcome to the WWI face database! </h2>
             <P> This database is meant for researchers to upload photos and find a potential face match for a previously unidentified person. Please see the copyright page for more information or if you have questions.
             </P>
-            <img alt="above" src="campusabove.jpg" style="float: right;" />
-        </nav>
+             </nav>
     </aside>
     <h2> To upload a photo, ensure that the name of the photo is the name of the person in it. Ensure that there are no extra characters in the title. </h2>
     <form action="recognize.php" method="post"
@@ -46,6 +47,9 @@ Known errors: none
         <input type="file" name="file" id="fileToUpload">
         <input type="submit" value="Upload" name="Submit"> 
     </form> 
-
+    
+    <h5> All photographs on this website were created before January 1, 1949 and are therefore in the public domain (SC 1997, c24, s.58). </h5>
+    <footer> <a rel="license" href="http://creativecommons.org/licenses/by/2.5/ca/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by/2.5/ca/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.5/ca/">Creative Commons Attribution 2.5 Canada License</a>.
+    </footer>
 
 </body>
